# InterviewIQ

./: .gitignore  README.md  index.html  package-lock.json  package.json
backend/: auth.py  crud.py  database.py  interviewiq.db  main.py  models.py  pyproject.toml  requirements.txt
src/: App.jsx  index.css  main.jsx
src/components/common/: Footer.jsx  Logo.jsx  Navbar.jsx  PageTransition.jsx  ProtectedRoute.jsx
src/components/ui/: Badge.jsx  Button.jsx  Card.jsx  FeedbackHelpers.jsx  InputFields.jsx  Loader.jsx  Toast.jsx
src/context/: InterviewContext.jsx
src/layouts/: AppLayout.jsx  MainLayout.jsx
src/lib/: chartSetup.js
src/pages/: CareerSetup.jsx  Dashboard.jsx  InterviewSession.jsx  Landing.jsx  Login.jsx  Profile.jsx  Results.jsx  ResumeUpload.jsx  Settings.jsx
src/services/: api.js  careerApi.js  interviewApi.js  resultsApi.js  resumeApi.js
